[package]
name = "fungi"
version = "0.6.0"
authors = ["FungiTeam <frank_dierolf@web.de>"]
edition = "2021"

[dependencies]
ink = { version = "~4.0.0", default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["psp34"] }


[dev-dependencies]
ink_e2e = "~4.0.0"
test_helpers = { path = "../test_helpers", default-features = false }

[lib]
name = "fungi"
path = "lib.rs"
crate-type = [
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16
